[tool.poetry]
name = "laser-pointer"
version = "0.1.0"
description = ""
authors = ["VictorBauler <victor.bauler@gmail.com>"]
readme = "README.md"
packages = [{include = "laser_pointer"}]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.7.0.72"
matplotlib = "^3.7.1"
pytesseract = "^0.3.10"
pandas = "^1.5.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.3"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"